# ESP32

./: .gitignore  README.md
ESP-ink/API_openweathermap/: CMakeLists.txt
ESP-ink/API_openweathermap/main/: CMakeLists.txt  main.c
ESP-ink/API_svatkyapi.cz/: CMakeLists.txt
ESP-ink/API_svatkyapi.cz/main/: CMakeLists.txt  main.c
ESP-ink/API_svatkyapicz/: CMakeLists.txt
ESP-ink/API_svatkyapicz/main/: CMakeLists.txt  main.c  wifi_sta.c
ESP-ink/Blink_LED/: CMakeLists.txt
ESP-ink/Blink_LED/main/: main.c
ESP-ink/Epaper_GDEY029T94_CalEPD_Demo/: CMakeLists.txt
ESP-ink/Epaper_GDEY029T94_CalEPD_Demo/components/CalEPD/: CMakeLists.txt  epd.cpp
ESP-ink/Epaper_GDEY029T94_CalEPD_Demo/components/CalEPD/include/: epd.h  epdspi.h
ESP-ink/Epaper_GDEY029T94_CalEPD_Demo/components/CalEPD/include/displays/goodisplay/: gdey029T94.h  gdey075T7.h
ESP-ink/Epaper_GDEY029T94_CalEPD_Demo/components/CalEPD/include/goodisplay/: gdey029T94.h
ESP-ink/Epaper_GDEY029T94_CalEPD_Demo/components/CalEPD/models/goodisplay/: gdey029T94.cpp
ESP-ink/Epaper_GDEY029T94_CalEPD_Demo/components/CalEPD/src/: epd.cpp  epdspi.cpp
ESP-ink/Epaper_GDEY029T94_CalEPD_Demo/components/CalEPD/src/displays/goodisplay/: gdey029T94.cpp  gdey075T7.cpp
ESP-ink/Epaper_GDEY075T7_CalEPD_Demo/: CMakeLists.txt
ESP-ink/Fan_Switch/: CMakeLists.txt
ESP-ink/I2C_BME280/: CMakeLists.txt
ESP-ink/I2C_SCD41/: CMakeLists.txt
ESP-ink/I2C_SGP41/: CMakeLists.txt
ESP-ink/I2C_SHT40/: CMakeLists.txt
ESP-ink/I2C_SPS30/: CMakeLists.txt
ESP-ink/WIFI_SNTP/: CMakeLists.txt
ESP-ink/nRF24L01p_RX/: CMakeLists.txt
(+43 files in other folders)
